# Kiro-Settings-Manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.kiro/agents/: argparse-cli-refactorer.json  argparse-cli-refactorer.md  cli-engineer.json  cli-output-formatter.md  git-manager.json  git-manager.md  hypothesis-test-writer.json  hypothesis-test-writer.md  readme-writer.json  task-agent-matcher.json  task-agent-matcher.md  task-builder.json  task-builder.md  terminal-ui-engineer.json  terminal-ui-engineer.md  ux-designer.json
.kiro/hooks/: manual-commit.kiro.hook  synthesise-specs.kiro.hook  work-on-issue.kiro.hook
.kiro/steering/: AWS-IAM.md  architecture.md  git-branching.md  plan.md  python-standards.md  python.md  release-process.md  repository-context.md  requirements.md  testing-standards.md
agents/: ux-designer.md
docs/: agent-recommendations.md  ksm-cli-review.md  ux-review.md  ux-visual-design-recommendation.md
docs/steering/: AWS-IAM.md  MCP-availability.md  (+6 more)
scripts/: copy-steering.sh  publish-to-pypi.sh  sync-to-kiro-settings.sh  update-allowed-commands.sh
settings/: allowed_commands.txt
tests/: conftest.py  test_add.py  test_add_registry.py  test_agent_converter.py  test_backfill_preservation.py  test_cli.py  test_color.py  test_completions_versioned.py  test_copier.py  test_dispatch_path_bug.py  test_dispatch_path_preservation.py  test_dot_notation.py  test_errors.py  test_git_ops.py  test_hook_converter.py  test_ide2cli.py  test_init_info_search.py  test_installer.py  test_integration.py  test_interactive_installed_filter_bug.py  test_interactive_installed_filter_preservation.py  test_ls.py  test_ls_all_preservation.py  test_ls_all_workspace_paths_bug.py  test_ls_format_grouped_workspace.py  test_ls_legacy_entry_handling_bug.py  test_ls_workspace_bug.py  test_ls_workspace_filter.py  test_ls_workspace_preservation.py  test_manifest.py  test_manifest_multi_workspace_bug.py  test_manifest_multi_workspace_preservation.py  test_persistence.py  test_persistence_file_not_found.py  test_registry.py  test_registry_aware_selector.py  test_registry_commands.py  test_remove_generated_files_bug.py  test_remover.py  test_remover_bug_condition.py  (+11 more)
(+127 files in other folders)
