[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-settings-manager"
version = "0.6.0"
description = "CLI tool for managing Kiro IDE configuration bundles"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
authors = [
    {name = "Tom Stanley"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual>=0.80.0",
    "PyYAML>=6.0",
]

[project.scripts]
ksm = "ksm.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "hypothesis",
    "black",
    "flake8",
    "flake8-pyproject",
    "mypy",
    "types-PyYAML",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__", ".hypothesis", ".pytest_cache"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
